[Bug] Image overflow error

--- a/src/components/Team/card.css
+++ b/src/components/Team/card.css
@@ -17,14 +17,22 @@
     background-color: linear-gradient(to bottom right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
 }
 .card .img-container{
+    /* object-fit: cover;
+    overflow: hidden; */
     width: 8em;
     height: 8em;
     background-color: #2c00da;
     border-radius: 50%;
     margin: 0 auto 2em auto;
+    position: relative;
 }
 .card img{
+    object-fit: cover;
+    position: absolute;
+    top: 0;
     width: 100%;
+    height: 100%;
+    overflow: hidden;
     border-radius: 50%;
 }
 .card h3{
